# udp_server_client

./: Makefile  README.md  build.sh  clean.sh  env.sh  run.sh
udp_client/: Cargo.toml
udp_client/src/: consts.rs  main.rs  packet.rs  packets_view.rs  sender.rs
udp_server/: CMakeLists.txt  main.cpp
udp_server/udp_server/: file.cpp  file.h  packet.cpp  packet.h  server.cpp  server.h
udp_server/udp_server/base/: buffer_reader.cpp  buffer_reader.h  buffer_writer.cpp  buffer_writer.h  crc32.h  sys_byteorder.h
udp_server/udp_server/net/: address.cpp  address.h  ipv4_address.cpp  ipv4_address.h  socket.cpp  socket.h  udp_socket.cpp  udp_socket.h
