[package]
name = "udp_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"]}
bincode = { version = "2.0.0-rc.1", features = ["serde"]}
bytesize = "1.1.0"
clap = { version = "4.0.7", features = [ "derive" ]}
crc = "3.0.0"
futures = "0.3.24"
governor = "0.5.0"
itertools = "0.10.5"
memmap = "0.7.0"
nonzero_ext = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.145", features = [ "derive" ]}
serde_repr = "0.1.9"